--- a/index.html
+++ b/index.html
@@ -80,14 +80,19 @@
 <body>
 
     <div class="header">
-        <input type="text" class="search-bar" id="search" placeholder="Search..." oninput="filterItems()">
-    </div>
+       <h1>Ivaansri</h1>
+</div>
 
     <div class="gallery" id="gallery">
-         <div class="card" data-title="1pointo membership">
-            <div class="title">1pointo membership</div>
-            <div class="desc">Perks included</div>
-            <a href="join.html" class="link">join</a> <span> Page </span></div>
+         <div class="card" data-title="posts">
+            <div class="title">Posts</div>
+            <div class="desc">Blog</div>
+            <a href="ivaan-sri.blogspot.com" class="link">Go</a> <span> External link </span></div>
+        </div>
+<div class="card" data-title="projects">
+            <div class="title">Projects</div>
+            <div class="desc">Pages</div>
+            <a href="projects.html" class="link">Go</a> <span> Page </span></div>
         </div>
     </div>
 
