--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
+margin: 5px
         }
         .desc {
             color: #b0b0b0;
@@ -87,7 +88,7 @@
          <div class="card" data-title="posts">
             <div class="title">Posts</div>
             <div class="desc">Blog</div>
-            <a href="ivaan-sri.blogspot.com" class="link">Go</a> <span> External link </span></div>
+            <a href="ivaan-sri.blogspot.com" class="link">Go</a> <span> External link </span></div><br>
         </div>
 <div class="card" data-title="projects">
             <div class="title">Projects</div>
