--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@ margin: 5px
             <div class="title">Projects</div>
             <div class="desc">Pages</div>
             <a href="projects.html" class="link">Go</a> <span> Page </span></div>
-        </div>
+        </div><br>
 <div class="card" data-title="contact">
             <div class="title">Contact</div>
             <div class="desc">Discord: @ivaansri</div>
             <a href="mailto:ivaansri.contact@gmail.com" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span></div>
-        </div>
+        </div><br>
     </div>
 
     <script>
