--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ margin: 5px
 <div class="card" data-title="contact">
             <div class="title">Contact</div>
             <div class="desc">Discord: @ivaansri</div>
-            <a href="mailto:ivaansri.contact@gmail.com" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span></div>
+            <a href="mailto:ivaansri.contact@gmail.com?subject=website/" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span></div>
         </div><br>
     </div>
 
