--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@ margin: 5px
             <div class="desc">Discord: @ivaansri</div>
             <a href="mailto:ivaansri.contact@gmail.com?subject=website/" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span></div>
         </div><br>
+<div class="card" data-title="newsletter">
+            <div class="title">Newsletter</div>
+            <iframe src="https://surveyheart.com/form/67c47f6f3d7d1c1d671dd1b1"></iframe><span> Newsletter </span></div>
+        </div><br>
     </div>
 
     <script>
