--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             color: #e0e0e0;
             padding: 20px;
         }
-        /* Sticky Header with Search Bar */
+        /* Sticky Header */
         .header {
             position: sticky;
             top: 0;
@@ -25,14 +25,12 @@
             background: #1e1e1e;
             padding: 10px 20px;
             display: flex;
-            justify-content: space-between;
             align-items: center;
             border-bottom: 1px solid #333;
             z-index: 101;
         }
-        .title {
-            font-size: 18px;
-            font-weight: bold;
+        .header h1 {
+            font-size: 20px;
             color: #e0e0e0;
         }
         .search-bar {
@@ -58,7 +56,10 @@
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
-margin: 5px
+        }
+        .title {
+            font-size: 18px;
+            font-weight: bold;
         }
         .desc {
             color: #b0b0b0;
@@ -76,34 +77,45 @@ margin: 5px
         .link:hover {
             background: #0056b3;
         }
+        iframe {
+            width: 100%;
+            height: 300px;
+            border: none;
+            margin-top: 10px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
 
     <div class="header">
-       <h1>Ivaansri</h1>
-</div>
+        <h1>Ivaansri</h1>
+        <input type="text" id="search" class="search-bar" placeholder="Search..." oninput="filterItems()">
+    </div>
 
     <div class="gallery" id="gallery">
-         <div class="card" data-title="posts">
+        <div class="card" data-title="posts">
             <div class="title">Posts</div>
             <div class="desc">Blog</div>
-            <a href="ivaan-sri.blogspot.com" class="link">Go</a> <span> External link </span></div><br>
+            <a href="https://ivaan-sri.blogspot.com" class="link">Go</a> <span> External link </span>
         </div>
-<div class="card" data-title="projects">
+
+        <div class="card" data-title="projects">
             <div class="title">Projects</div>
             <div class="desc">Pages</div>
-            <a href="projects.html" class="link">Go</a> <span> Page </span></div>
-        </div><br>
-<div class="card" data-title="contact">
+            <a href="projects.html" class="link">Go</a> <span> Page </span>
+        </div>
+
+        <div class="card" data-title="contact">
             <div class="title">Contact</div>
             <div class="desc">Discord: @ivaansri</div>
-            <a href="mailto:ivaansri.contact@gmail.com?subject=website/" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span></div>
-        </div><br>
-<div class="card" data-title="newsletter">
+            <a href="mailto:ivaansri.contact@gmail.com?subject=website/" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span>
+        </div>
+
+        <div class="card" data-title="newsletter">
             <div class="title">Newsletter</div>
-            <iframe src="https://surveyheart.com/form/67c47f6f3d7d1c1d671dd1b1"></iframe><span> Newsletter </span></div>
-        </div><br>
+            <iframe src="https://surveyheart.com/form/67c47f6f3d7d1c1d671dd1b1"></iframe>
+        </div>
     </div>
 
     <script>
