--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <div class="card" data-title="newsletter">
             <div class="title">Newsletter</div>
             <iframe src="https://surveyheart.com/form/67c47f6f3d7d1c1d671dd1b1"></iframe>
+<a href="https://surveyheart.com/form/67c47f6f3d7d1c1d671dd1b1" class="link">Full page</a>
         </div>
     </div>
 
