--- a/index.html
+++ b/index.html
@@ -100,16 +100,10 @@
             <a href="https://ivaan-sri.blogspot.com" class="link">Go</a> <span> External link </span>
         </div>
 
-        <div class="card" data-title="contact">
+        <div class="card" data-title="contact email e-mail">
             <div class="title">Contact</div>
             <div class="desc">Discord: @ivaansri</div>
-            <a href="mailto:ivaansri.contact@gmail.com?subject=website/" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span>
-        </div>
-
-        <div class="card" data-title="newsletter">
-            <div class="title">Newsletter</div>
-            <iframe src="https://surveyheart.com/form/67c47f6f3d7d1c1d671dd1b1"></iframe>
-<a href="https://surveyheart.com/form/67c47f6f3d7d1c1d671dd1b1" class="link">Full page</a>
+            <a href="mailto:ivaansri.contact@gmail.com?subject=website/" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span> 
         </div>
     </div>
 
