--- a/index.html
+++ b/index.html
@@ -2,121 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ivaansri</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: sans-serif;
-        }
-        body {
-            background: #121212;
-            color: #e0e0e0;
-            padding: 20px;
-        }
-        /* Sticky Header */
-        .header {
-            position: sticky;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: #1e1e1e;
-            padding: 10px 20px;
-            display: flex;
-            align-items: center;
-            border-bottom: 1px solid #333;
-            z-index: 101;
-        }
-        .header h1 {
-            font-size: 20px;
-            color: #e0e0e0;
-        }
-        .search-bar {
-            flex: 1;
-            margin-left: 10px;
-            padding: 8px;
-            font-size: 16px;
-            border: 1px solid #444;
-            border-radius: 5px;
-            outline: none;
-            background: #1e1e1e;
-            color: #e0e0e0;
-        }
-        /* Gallery */
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-            margin-top: 20px;
-        }
-        .card {
-            background: #1e1e1e;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
-        }
-        .title {
-            font-size: 18px;
-            font-weight: bold;
-        }
-        .desc {
-            color: #b0b0b0;
-            margin: 5px 0;
-        }
-        .link {
-            display: inline-block;
-            margin-top: 10px;
-            text-decoration: none;
-            color: white;
-            background: #007bff;
-            padding: 5px 10px;
-            border-radius: 5px;
-        }
-        .link:hover {
-            background: #0056b3;
-        }
-        iframe {
-            width: 100%;
-            height: 300px;
-            border: none;
-            margin-top: 10px;
-            border-radius: 5px;
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=https://linktr.ee/ivaan.sri">
+    <title>Redirecting...</title>
 </head>
 <body>
-
-    <div class="header">
-        <h1>Ivaansri</h1>
-        <input type="text" id="search" class="search-bar" placeholder="Search..." oninput="filterItems()">
-    </div>
-
-    <div class="gallery" id="gallery">
-        <div class="card" data-title="posts">
-            <div class="title">Posts</div>
-            <div class="desc">Blog</div>
-            <a href="https://ivaan-sri.blogspot.com" class="link">Go</a> <span> External link </span>
-        </div>
-
-        <div class="card" data-title="contact email e-mail">
-            <div class="title">Contact</div>
-            <div class="desc">Discord: @ivaansri</div>
-            <a href="mailto:ivaansri.contact@gmail.com?subject=website/" class="link">Mail</a> <span> Mailto:ivaa...@gmail.com </span> 
-        </div>
-    </div>
-
-    <script>
-        function filterItems() {
-            let input = document.getElementById("search").value.toLowerCase();
-            let cards = document.querySelectorAll(".card");
-            cards.forEach(card => {
-                let title = card.getAttribute("data-title").toLowerCase();
-                card.style.display = title.includes(input) ? "block" : "none";
-            });
-        }
-    </script>
-
+    <p>If you are not redirected, <a href="https://linktr.ee/ivaan.sri">click here</a>.</p>
 </body>
 </html>
