--- a/index.html
+++ b/index.html
@@ -2,10 +2,144 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://linktr.ee/ivaan.sri">
-    <title>Redirecting...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ivaansri</title>
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <style>
+        /* Dark mode styling */
+        body {
+            font-family: Arial, sans-serif;
+            background: #121212;
+            color: white;
+            text-align: center;
+            margin: 0;
+        }
+        h1, h2 { color: #fff; }
+
+        /* Banner */
+        .banner {
+            width: 100%;
+            height: 200px;
+            background: url('banner.jpg') no-repeat center center/cover;
+        }
+
+        /* Tab navigation */
+        .nav {
+            display: flex;
+            justify-content: center;
+            border-bottom: 2px solid #333;
+            overflow: hidden;
+        }
+        .tab {
+            flex: 1;
+            padding: 15px;
+            text-align: center;
+            cursor: pointer;
+            background: #222;
+            transition: background 0.3s;
+        }
+        .tab:hover { background: #333; }
+        .active { background: #007bff; }
+
+        /* Tab content */
+        .content { display: none; padding: 20px; }
+        .active-content { display: block; }
+
+        /* Cards for posts & pages */
+        .card {
+            background: #1e1e1e;
+            padding: 15px;
+            margin: 10px auto;
+            width: 80%;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+        }
+        .btn {
+            padding: 10px;
+            margin-top: 10px;
+            border: none;
+            cursor: pointer;
+            background: #007bff;
+            color: white;
+            width: 100px;
+            border-radius: 5px;
+        }
+        .btn:hover { background: #0056b3; }
+
+        /* Search bar */
+        #search {
+            padding: 10px;
+            width: 80%;
+            margin-bottom: 10px;
+            background: #333;
+            border: 1px solid #444;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://linktr.ee/ivaan.sri">click here</a>.</p>
+
+    <!-- Banner -->
+    <div class="banner"><img href="forked.jpg"></img></div>
+
+    <!-- Tab Navigation -->
+    <div class="nav">
+        <div class="tab active" onclick="showTab('pages')">Pages</div>
+        <div class="tab" onclick="showTab('posts')">Posts</div>
+        <div class="tab" onclick="showTab('about')">About</div>
+    </div>
+
+    <!-- Pages Section -->
+    <div id="pages" class="content active-content">
+        <h2>Pages</h2>
+        <input type="text" id="search" onkeyup="filterPages()" placeholder="Search pages...">
+        <div id="pageList">
+            <div class="card">
+                <h3>Page 1</h3>
+                <p>Description of Page 1</p>
+                <button class="btn">Go</button>
+            </div>
+            <div class="card">
+                <h3>Page 2</h3>
+                <p>Description of Page 2</p>
+                <button class="btn">Go</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Posts Section -->
+    <div id="posts" class="content">
+        <h2>Latest Posts</h2>
+        <div class="card">
+            <h3>Post Title</h3>
+            <p>Short description of the post.</p>
+            <button class="btn">Full Page</button>
+        </div>
+    </div>
+
+    <!-- About Section -->
+    <div id="about" class="content">
+        <h2>About</h2>
+        <p>Welcome to my website!</p>
+        <p>Contact: <a href="mailto:ivaansri.contact@gmail.com?subject=website/" style="color: #007bff;">ivaansri.contact@gmail.com</a></p>
+    </div>
+
+    <script>
+        function showTab(tab) {
+            document.querySelectorAll('.content').forEach(el => el.classList.remove('active-content'));
+            document.getElementById(tab).classList.add('active-content');
+
+            document.querySelectorAll('.tab').forEach(el => el.classList.remove('active'));
+            document.querySelector(`.tab[onclick="showTab('${tab}')"]`).classList.add('active');
+        }
+
+        function filterPages() {
+            let input = document.getElementById("search").value.toLowerCase();
+            document.querySelectorAll('.card').forEach(el => {
+                el.style.display = el.textContent.toLowerCase().includes(input) ? "" : "none";
+            });
+        }
+    </script>
+
 </body>
 </html>
