--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
 
     <!-- Banner -->
-    <div class="banner"><img href="forked.jpg"></img></div>
+    <h1>Ivaansri</h1>
 
     <!-- Tab Navigation -->
     <div class="nav">
