--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ivaansri</title>
-    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="icon" type="image/png" href="forked.jpg">
     <style>
         /* Dark mode styling */
         body {
@@ -76,6 +76,7 @@
 <body>
 
     <h1>Ivaansri</h1>
+<p>Making coolstuff</p>
 
     <!-- Tab Navigation -->
     <div class="nav">
@@ -108,9 +109,9 @@
         <input type="text" id="searchPosts" class="search-bar" onkeyup="filterContent('postList', 'searchPosts')" placeholder="Search posts...">
         <div id="postList">
             <div class="card">
-                <h3>Hello</h3>
-                <p>Hello guys</p>
-                <button class="btn" onclick="location.href='https://example.com'">Full Page</button>
+                <h3>Notion</h3>
+                <p>Notion is the best</p>
+                <button class="btn" onclick="location.href='https://notion.so'"> External link </button>
             </div>
             <div class="card">
                 <h3>Hello</h3>
