--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ivaansri</title>
+    <title>Ivaansri.</title>
     <link rel="icon" type="image/png" href="forked.jpg">
     <style>
         /* Dark mode styling */
