--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+I l<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ivaansri.</title>
-    <link rel="icon" type="image/png" href="forked.jpg">
+    <link rel="icon" type="image/png" href="imged.jpg">
     <style>
         /* Dark mode styling */
         body {
@@ -74,7 +74,7 @@
     </style>
 </head>
 <body>
-
+<img href="forked.jpg"></img>
     <h1>Ivaansri</h1>
 <p>Making coolstuff</p>
 
