--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-I l<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ivaansri.</title>
-    <link rel="icon" type="image/png" href="imged.jpg">
+    <link rel="icon" type="image/png" href="Imged.jpg">
     <style>
         /* Dark mode styling */
         body {
