--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <input type="text" id="searchPages" class="search-bar" onkeyup="filterContent('pageList', 'searchPages')" placeholder="Search pages...">
         <div id="pageList">
             <div class="card">
-                <h3>Hello</h3>
-                <p>Hello guys</p>
-                <button class="btn" onclick="location.href='https://example.com'">Go</button>
+                <h3>Text editor</h3>
+                <p>Ramdom text editor on the internet</p>
+                <button class="btn" onclick="location.href='https://ivaan-sri.github.io/textedit.html'">Go</button>
             </div>
             <div class="card">
                 <h3>Hello</h3>
