--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                 <button class="btn" onclick="location.href='https://ivaan-sri.github.io/textedit.html'">Go</button>
             </div>
             <div class="card">
-                <h3>Hello</h3>
-                <p>Hello guys</p>
-                <button class="btn" onclick="location.href='https://example.com'">Go</button>
+                <h3>DrawCups</h3>
+                <p>Basic whiteboard</p>
+                <button class="btn" onclick="location.href='https://ivaan-sri.github.io/drawcup.html'">Go</button>
             </div>
         </div>
     </div>
