--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div>
         <button class="btn" onclick="location.href='https://github.com/ivaan-sri'">GitHub</button>
         <button class="btn" onclick="location.href='https://www.youtube.com/@ivaansri1359'">YouTube</button>
-    </div>
+    </div><br><br>
 
     <!-- Tab Navigation -->
     <div class="nav">
